# model_predictive_control

./: .gitignore  GoatMPCDC.m  README.md
AcrobotDC/: DCAlgorithmMain.m  acrobotDynamics.m
Rviz_Arm_Tracking/: .gitignore  README.md
Rviz_Arm_Tracking/arm_feedback/: CMakeLists.txt  package.xml
Rviz_Arm_Tracking/arm_feedback/include/: hebi_command.h  hebi_feedback.h  hebi_group.h  hebi_group_command.h  hebi_group_feedback.h  hebi_group_info.h  hebi_info.h  hebi_lookup.h  hebi_mac_address.h  hebi_module.h  hebi_vector_3_f.h
Rviz_Arm_Tracking/arm_feedback/lib/: hebi.lib  libhebi.so.0  libhebi.so.0.12
Rviz_Arm_Tracking/arm_feedback/msg/: CommandML.msg  FeedbackML.msg
Rviz_Arm_Tracking/arm_feedback/src/: arm_dynamics.cpp  arm_dynamics.hpp  arm_feedback.cpp  arm_kinematics.cpp  color.hpp  command.cpp  command.hpp  feedback.cpp  feedback.hpp  feedback_print_helpers.cpp  group.cpp  group.hpp  group_command.cpp  group_command.hpp  group_feedback.cpp  group_feedback.hpp  group_info.cpp  group_info.hpp  hebi_listener.cpp  hebi_util.h  info.cpp  info.hpp  kdc_arm_feedback.cpp  kdc_arm_feedback_backup.cpp  lookup.cpp  lookup.hpp  lookup_helpers.cpp  mac_address.cpp  mac_address.hpp  module.cpp  module.hpp  trytry.cpp  util.hpp  vector_3_f.hpp
Rviz_Arm_Tracking/arm_feedback/srv/: FI.srv
Rviz_Arm_Tracking/arm_rviz/: CMakeLists.txt  package.xml
Rviz_Arm_Tracking/arm_rviz/launch/: imr_arm_rviz.launch  imr_arm_rviz2.launch  imr_arm_rviz_circtrack.launch  kdc_arm.launch
Rviz_Arm_Tracking/arm_rviz/meshes/: X5-9.dae  x_wristdae.dae
Rviz_Arm_Tracking/arm_rviz/rviz/: circle_tracking_rviz.rviz  imr_arm_rviz.rviz  kdc_arm.rviz
Rviz_Arm_Tracking/arm_rviz/urdf/: imr_arm_rviz_updated.urdf  imr_arm_rviz_updated.urdf.xacro
Rviz_Arm_Tracking/trace_path/: CMakeLists.txt  package.xml
Rviz_Arm_Tracking/trace_path/src/: ref_path.cpp  trace_path.cpp  trace_path2.cpp  trace_path_interval.cpp
acrobot/: acrobotDynamics.m  acrobotMPC_duration.m
acrobot_3_mpc/: Acrobot_It1.mat  Acrobot_It2.mat  Derive_acrobot.m  Test.m  acrobotConstraintFCN.m  acrobotConstraintFCN_DC.m  acrobotDynamicsCT.m  acrobotMPCDC.m  acrobotMPCDC.m~  acrobotObjectiveFCN.m  acrobotObjectiveFCN.m~  results.mat
acrobot_3_mpc_controls_only/: acrobotConstraintFCN.m  acrobotDynamicsCT.m  acrobotKinematics.m  acrobotMPCDC.m  acrobotObjectiveFCN.m  results.mat  results_acro3_0.1deflection_sort_of_working.mat  testDynamics.m
acrobot_3_mpc_full_actuation/: acrobotConstraintFCN_DC.m  acrobotConstraintFCN_traj.m  acrobotDynamicsCT.m  acrobotDynamicsDT.m  acrobotMPCDC.m  acrobotMPC_DC.m  acrobotMPC_duration.m  acrobotMPC_traj.m  acrobotObjectiveFCN.m  drawAcrobot.m  dynamics.nb  results.mat  test_results.m
acrobot_model_train/: acrobotTrain.py  generateData.py  mpcNetwork.py  robot.py  testDynamics.py  train_data.mat
acrobot_mpc/: acrobotConstraintFCN_DC.m  acrobotDynamicsCT.m  acrobotMPC.m  acrobotMPCDC.m  acrobotMPC_DC.m  acrobotMPC_duration.m  acrobotObjectiveFCN.m  results.mat  testDynamics.m
acrobot_mpc_inputs/: acrobotDynamicsCT.m  acrobotMPC_DC.m  acrobotObjectiveFCN.m  results.mat  testDynamics.m
acrobot_mpc_matlab/: acrobotConstraintFCN_DC.m
acrobot_mpc_train/: Output_data.mat  acrobotCollectData.m  acrobotLinearize.m  acrobotMPC_DC.m  acrobotObjectiveFCN.m  acrobotTrain.py  input.txt  model.cpkt.data-00000-of-00001  model.cpkt.index  mpcNetwork.py  param_config.m  results.mat  test_data.mat  train_data.mat
acrobot_mpc_william/: Input_data.txt  ObjectiveFCN_test.m  Output_data.txt  acrobotCollectData.m  acrobotConstraintFCN_DC.m  acrobotDynamicsCT.m  acrobotTrain.py  data.mat  load_file.py  model.cpkt.data-00000-of-00001  model.cpkt.index  testDynamics.m
bio_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
goat2D_fullStateWithConstraint/: .gitignore  Aq.m  Aqdot.m  Cq.m  EnergyBasedDynamics.nb  GoatMPCDC.m  GoatMPCDC.m~  Gq.m  Lambda.m  LambdaAnalytical.m  Mq.m  TestAnalytical.m  TestDynamics.m  TestLinearControllability.m  backwardPassS1Goat.m  backwardPassS2Goat.m  computeActionsGoat.m  forwardPassTrajStabGoat.m  goatConstraintFCNDC.m  goatConstraintFCNGLDC.m  goatConstraintFCNHSDC.m  goatDynamicsDT.m  goatFDWC.m  goatFullDynamicsWithConstraints.m  goatLinearizedFullStateDynamics.m  iLQRForGoat.m  plotDC.m  visualizeTrajectory.m  workspace.mat
goat2D_fullStates_mpc/: GoatMPC.m  GoatMPCDC.m  derivation_correct_rotation_full_state.nb  forwardKinematics.m  fullDynamics.m  fullLinearizationAndLQR.m  goatConstraintFCNDC.m  goatDynamicsDT.m  goatFullDynamicsCT.m  plotDC.m  solveDynamics.m
goat2D_mpc/: GoatMPC.m  GoatMPCDC.m  TestAnalytical.m  constraintFCN.m  derivation_correct_rotation.nb  derivation_correct_rotation_full_state.nb  dynamics.m  findFeasibleConfiguration.m  findFeasibleConfigurationAnalytical.m  forwardKinematicsAnalytical.m  goatConstraintFCN.m  goatConstraintFCNDC.m  goatDynamicsCT.m  goatDynamicsDT.m  linearizationAndLQR.m  playback.m  results.mat  solveDynamics.m
hebi_arm_matlab/: 1.mat  2.mat  3.mat  Euler-Lagrange_Dynamic_Equations.nb  MPC.asv  MPC.m  constraintFCN.m  dynamicsCT.asv  dynamicsCT.m  dynamicsDT.m  parameters.asv  parameters.m  results.mat
model_train/: Input_data.mat  RNN.py  acrobotKinematics.m  acrobotTrain.py  compareDynamics.py  configs.py  data_processor.py  main.py  mpcNetwork.py  rnn.py  rnnNetwork.py  robot.py  testDNNDynamics.py  testDynamics.py
mpc_python/: 1234.npy  MPC_trajectory_N_10  acrobot_results  acrobot_results_3sec  acrobot_results_4parts  acrobot_results_joint1_good  acrobot_results_kindaWorking  acrobot_results_trajectory_reachesTarget  acrobot_results_working  acrobot_trajectory.mat  compilePlots.py  data_generation.py  data_generation_small.py  frames.gv  furuta_trajOpt.py  main.py  mpc.py  ref.npy  robo_temp.py  robot.py  rviz_viz.py  simple_rnn.py  testDynamics.py  xyzt.npy
planarRR/: RNN.py  compareDynamics.py  data_generation_small.py  data_processor.py  main.py  robot.py  testDynamics.py
pp_model_train/: a.txt  compareDynamics.py  logger.py  testDNNDynamics.py
scripts/: TrajectoryGenerartor.py  kinematics.py  main.py
(+633 files in other folders)
