<?xml version="1.0"?>
<package>
  <name>arm_feedback</name>
  <version>1.0.0</version>

  <description>
    hebi api
  </description>

  <maintainer email="matt_tesch@gmail.com">Matt Tesch</maintainer>
  <author>Matt Tesch</author>

  <url type="website">http://www.ros.org/wiki/video_stream_opencv</url>
  <url type="development">https://github.com/ros-drivers/video_stream_opencv</url>
  <url type="bugtracker">https://github.com/ros-drivers/video_stream_opencv/issues</url>

  <license>CC BY-NC-SA 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
	<build_depend>cmake_modules</build_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_depend>tf2</build_depend>
	<build_depend>tf2_ros</build_depend>
	<build_depend>tf</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
	<run_depend>trajectory_msgs</run_depend>
	<run_depend>visualization_msgs</run_depend>
	<run_depend>tf2</run_depend>
	<run_depend>tf2_ros</run_depend>
	<run_depend>tf</run_depend>

</package>
