<?xml version="1.0"?>
<package>
  <name>arm_rviz</name>
  <version>0.0.0</version>
  <description>The arm_rviz package</description>

  <maintainer email="chaohui@todo.todo">chaohui</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
	<run_depend>urdf</run_depend>
	<run_depend>xacro</run_depend>
</package>
